--- a/gallery.html
+++ b/gallery.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discovery Land Company</title>
+    <!-- adding stylesheet to load bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://discoverylandco.com/favicon-16x16.png">
+    <!-- gallery and common styles sheet linked -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
 </head>
@@ -45,22 +47,24 @@
         
         <!--margin top-->
         <div class="container ">
-            <!-- Declaring margin top as 1px -->
+            <!-- Declaring row wuth margin top as 1px -->
             <div class="row mt-1 ">
-                <!-- dividing column of 3 equal length -->
+                <!-- dividing into 3 columns of equal length -->
                 <div class="col-4 ">
                     <div>
                         <img class="image" src="images/gallery/outdoor.jpg" alt="">
 
                     </div>
-                     <!-- using margin top as 5 -->
+                     <!-- using margin top spacing of 3rem. -->
                     <h1 class="mt-5">Outdoor Pursuits</h1>
                   
                 </div>
+                 <!-- dividing into 3 columns of equal length -->
                 <div class="col-4 ">
                     <div>
                         <img class="image" src="images/gallery/golf.jpg" alt="">
                     </div>
+                    <!-- using margin top spacing of 3rem. -->
                     <h1 class="mt-5">Golf</h1>
                 </div>
                 <div class="col-4 ">
