about page added

--- a/gallery.html
+++ b/gallery.html
@@ -31,10 +31,10 @@
 
                 <div class="navbar">
                     <ul class="list">
-                        <!-- <li class="item"><a class="item-list" href="../pages/about.html">About DLC</a></li> -->
-                        <li class="item"><a class="item-list" href="../pages/gallery.html">Our Worlds</a></li>
+                        <li class="item"><a class="item-list" href="about.html">About DLC</a></li>
+                        <li class="item"><a class="item-list" href="ourWorlds.html">Our Worlds</a></li>
                         <!-- <li class="item"><a class="item-list" href="../pages/experiences.html">Experiences</a></li> -->
-                        <li class="item"><a class="item-list" href="../pages/gallery.html">Gallery</a></li>
+                        <li class="item"><a class="item-list" href="gallery.html">Gallery</a></li>
                     </ul>
                 </div>
             </header>
@@ -47,7 +47,7 @@
         
         <!--margin top-->
         <div class="container ">
-            <!-- Declaring row wuth margin top as 1px -->
+            <!-- Declaring row with margin top as 1px -->
             <div class="row mt-1 ">
                 <!-- dividing into 3 columns of equal length -->
                 <div class="col-4 ">
