--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -19,18 +19,15 @@
             <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
             <nav class="navbar navbar-expand-lg">
                 <div class="container main-container">
-                    <a class="navbar-brand" href="../pages/home.html"><img src="images/logo.svg" alt="logo" /></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/ourWorlds.html">Our World</a>
+                                <a class="nav-link" href="home.html">About DLC</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="../pages/gallery.html">Gallery</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="ourWorlds.html">Our World</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
 
                         </ul>
                     </div>
