minor issues fixed

--- a/gallery.html
+++ b/gallery.html
@@ -99,9 +99,10 @@
     </div>    
 </body>
 
-<footer>
-    <p>&copy;Discovery Land Company. All rights reserved.</p>
+<footer class="footer">
+    <div class="container">
+            <p>&copy;Discovery Land Company. All rights reserved.</p>
+    </div>
 </footer>
-
 
 </html>
