--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -19,6 +19,7 @@
             <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
             <nav class="navbar navbar-expand-lg">
                 <div class="container main-container">
+                    <a class="navbar-brand" href="home.html"><img src="images/logo.svg" alt="logo" /></a>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
@@ -241,8 +242,10 @@
     </section>
 </body>
 
-<footer>
-    <p>&copy;Discovery Land Company. All rights reserved.</p>
+<footer class="footer">
+    <div class="container">
+            <p>&copy;Discovery Land Company. All rights reserved.</p>
+    </div>
 </footer>
 
 </html>
