--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -29,14 +29,14 @@
                                 <a class="nav-link" href="ourWorlds.html">Our World</a>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-
                         </ul>
                     </div>
                 </div>
             </nav>
         <!-- </div>  -->
         <section class="section-1">
-        <!--margin top-->
+        <!-- Declaring row with margin top as 5rem-->
+        <!-- custom selection added for gallery container -->
         <div class="container mt-5 gallery-container">
             <div class="row mt-1 ">
                 <div class="col-lg-3 col-md-4 col-sm-12 gallery-margin">
