more comments added

--- a/about.html
+++ b/about.html
@@ -42,8 +42,10 @@
             <h1>Creating your <br /><span>perfect world</span> </h1>
         </div>
     </section>
+    <!-- columns added using bootstrap classes from documentation -->
     <section class="section-2">
         <div class="section2-content">
+            <!-- https://getbootstrap.com/docs/5.0/layout/columns/ -->
             <div class="col-md-8 offset-md-2">
                 <p class="para-1">
                     Founded in 1994 by Mike Meldman, Discovery Land Company is a US-based real estate developer and
@@ -87,6 +89,8 @@
                 </div>
             </div>
     </section>
+
+    <!--custom style declared for selector footer -->
     <footer class="footer">
         <div class="container">
                 <p>&copy;Discovery Land Company. All rights reserved.</p>
