--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -46,8 +46,11 @@
                     <h1>North Shore Preserve</h1>
                     <p>Kaua'i, Hawaii</p>
                 </div>
+                <!-- adding responsive design to handle number of columns in the screen. -->
+                <!-- custom style added for class gallery-margin -->
                 <div class="col-lg-3 col-md-4 col-sm-12 gallery-margin">
                     <div>
+                        <!-- Images in Bootstrap are made responsive with .img-fluid. https://getbootstrap.com/docs/5.0/content/images/-->
                         <img class="img-fluid" src="images/OurWorlds/James-island.jpg" alt="">
                     </div>
                     <h1>James Island</h1>
@@ -242,6 +245,7 @@
     </section>
 </body>
 
+<!--custom style declared for selector footer -->
 <footer class="footer">
     <div class="container">
             <p>&copy;Discovery Land Company. All rights reserved.</p>
