--- a/gallery.html
+++ b/gallery.html
@@ -21,18 +21,12 @@
         <div class="firstSection-1">
             <header class="header">
                 <a class="logo" href="about.html" target="_self">
-                    <img src="images/gallery/circle-cropped.png" class="logo-img">
-                    <div class="title">
-                        <!-- custom style declared for text in logo -->
-                        <div class="title-top">Discovery</div>
-                        <div class="title-bottom">LAND COMPANY</div>
-                    </div>
+                    <img src="images/logoimage.png" class="logo-img">    
                 </a>
-             
 
                 <div class="navbar">
                     <ul class="list">
-                        <li class="item"><a class="item-list" href="about.html">About DLC</a></li>
+                        <li class="item"><a class="item-list" href="home.html">Home</a></li>
                         <li class="item"><a class="item-list" href="ourWorlds.html">Our Worlds</a></li>
                         <!-- <li class="item"><a class="item-list" href="../pages/experiences.html">Experiences</a></li> -->
                         <li class="item"><a class="item-list" href="gallery.html">Gallery</a></li>
