--- a/home.html
+++ b/home.html
@@ -8,14 +8,14 @@
     <title>Discovery Land Company</title>
     <link rel="icon" href="../assets/favicon-16x16.png" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <nav class="navbar  fixed-top navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href=""><img src="images/logo.svg" alt="logo" /></a>
+            <a class="navbar-brand" href=""><img src="images/logoimage.png" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About DLC</a>
+                        <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ourWorlds.html">Our World</a>
+                        <a class="nav-link" href="ourWorlds.html">Our Worlds</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="experiences.html">Experiences</a>
