--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -19,14 +19,14 @@
             <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
             <nav class="navbar navbar-expand-lg">
                 <div class="container main-container">
-                    <a class="navbar-brand" href="home.html"><img src="images/logo.svg" alt="logo" /></a>
+                    <a class="navbar-brand" href="home.html"><img src="images/logoimage.png" alt="logo" /></a>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="home.html">About DLC</a>
+                                <a class="nav-link" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="ourWorlds.html">Our World</a>
+                                <a class="nav-link" href="ourWorlds.html">Our Worlds</a>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                         </ul>
