experience page added

--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,14 @@
         <div class="firstSection-1">
             <header class="header">
                 <a class="logo" href="about.html" target="_self">
-                    <img src="images/logoimage.png" class="logo-img">    
+                    <img src="images/logoimage.png" class="logo-img">
                 </a>
 
                 <div class="navbar">
                     <ul class="list">
                         <li class="item"><a class="item-list" href="home.html">Home</a></li>
                         <li class="item"><a class="item-list" href="ourWorlds.html">Our Worlds</a></li>
-                        <!-- <li class="item"><a class="item-list" href="../pages/experiences.html">Experiences</a></li> -->
+                        <li class="item"><a class="item-list" href="experiences.html">Experiences</a></li>
                         <li class="item"><a class="item-list" href="gallery.html">Gallery</a></li>
                     </ul>
                 </div>
