--- a/home.html
+++ b/home.html
@@ -29,9 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourWorlds.html">Our Worlds</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="experiences.html">Experiences</a>
-                    </li> -->
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
     <!--custom style declared for selector footer -->
     <footer class="footer">
         <div class="container">
-                <p>&copy;Discovery Land Company. All rights reserved.</p>
+                <p>&copy;Refined Reside Reality. All rights reserved.</p>
         </div>
     </footer>
 </body>
