--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -28,7 +28,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="ourWorlds.html">Our Worlds</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="experiences.html">Experiences</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>                    
                         </ul>
                     </div>
                 </div>
