--- a/home.html
+++ b/home.html
@@ -48,10 +48,7 @@
             <!-- https://getbootstrap.com/docs/5.0/layout/columns/ -->
             <div class="col-md-8 offset-md-2">
                 <p class="para-1">
-                    Founded in 1994 by Mike Meldman, Discovery Land Company is a US-based real estate developer and
-                    operator
-                    of private residential club communities and resorts with a world-renowned portfolio of domestic and
-                    international properties.
+                    Established in 2024, Refined Reside Realty is an innovative real estate firm specializing in the development and management of premium residential communities and luxury resorts. With a mission to redefine the standards of living and leisure, Refined Reside Realty boasts a diverse portfolio that encompasses both domestic and international locations, offering unparalleled experiences and amenities to its discerning clientele.
                 </p>
             </div>
         </div>
@@ -82,7 +79,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <figure class="figure">
-                        <img src="images/about/aboutpage-img1.jpg" class="figure-img img-fluid rounded"
+                        <img src="images/about/roberto-nickson-so3wgJLwDxo-unsplash (2) (1).jpg" class="figure-img img-fluid rounded"
                             alt="...">
 
                     </figure>
