--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discovery Land Company</title>
+    <title>Refined Reside Realty</title>
     <link rel="icon" href="../assets/favicon-16x16.png" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/home.css" />
@@ -48,10 +48,10 @@
             <!-- https://getbootstrap.com/docs/5.0/layout/columns/ -->
             <div class="col-md-8 offset-md-2">
                 <p class="para-1">
-                    Established in 2024, Refined Reside Realty is an innovative real estate firm specializing in the development and management of premium residential communities and luxury resorts. With a mission to redefine the standards of living and leisure, Refined Reside Realty boasts a diverse portfolio that encompasses both domestic and international locations, offering unparalleled experiences and amenities to its discerning clientele.
+                    Established in 2024, Refined Reside Realty specializes in premium residential communities and luxury resorts, offering unparalleled living and leisure experiences across a diverse international portfolio.
                 </p>
             </div>
-        </div>
+        </div>  
         <div class="container content2">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6 col-sm-12 colm">
