--- a/gallery.html
+++ b/gallery.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discovery Land Company</title>
+    <title>Refined Reside Realty</title>
     <!-- adding stylesheet to load bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://discoverylandco.com/favicon-16x16.png">
     <!-- gallery and common styles sheet linked -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
@@ -97,7 +96,7 @@
 <!--custom style declared for selector footer -->
 <footer class="footer">
     <div class="container">
-            <p>&copy;Discovery Land Company. All rights reserved.</p>
+            <p>&copy;Refined Reside Reality. All rights reserved.</p>
     </div>
 </footer>
 
