Added career and contact pages

--- a/gallery.html
+++ b/gallery.html
@@ -29,6 +29,11 @@
                         <li class="item"><a class="item-list" href="ourWorlds.html">Our Worlds</a></li>
                         <li class="item"><a class="item-list" href="experiences.html">Experiences</a></li>
                         <li class="item"><a class="item-list" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar" href="#">
+                                <div class="menu-icon"><span></span></div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </header>
@@ -99,5 +104,21 @@
             <p>&copy;Refined Reside Reality. All rights reserved.</p>
     </div>
 </footer>
-
+ <!---inner pages menubar    -->
+ <div class="inner-pages ">
+    <div class="container position-relative">
+       <nav class="d-flex justify-content-between align-items-center">
+           <img src="../assets/home_page/logo_symbol.svg" alt="">
+                <div class="close-menu">
+                    X
+                </div>
+        </nav>
+        <ul class="list">
+            <li> <a class="" href="career.html">Career</a></li>
+            <li> <a class="" href="contact.html">Contact</a></li>
+        </ul>
+    </div>        
+</div>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
+<script src="js/js.js"></script>
 </html>
