--- a/experiences.html
+++ b/experiences.html
@@ -33,6 +33,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menubar" href="#">
+                            <div class="menu-icon"><span></span></div>
+                        </a>
                     </li>                    
                 </ul>
             </div>
@@ -86,7 +91,24 @@
                 <p>&copy;Refined Reside Reality. All rights reserved.</p>
         </div>
     </footer>
+     <!---inner pages menubar    -->
+     <div class="inner-pages ">
+        <div class="container position-relative">
+           <nav class="d-flex justify-content-between align-items-center">
+               <img src="images/logo.svg" alt="">
+                    <div class="close-menu">
+                        X
+                    </div>
+            </nav>
+            <ul class="list">
+                <li> <a class="" href="career.html">Career</a></li>
+                <li> <a class="" href="contact.html">Contact</a></li>
+            </ul>
+        </div>        
+    </div>
     
 </body>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
+<script src="js/js.js"></script>
 
 </html>
