--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discovery Land Company</title>
+    <title>Refined Reside Realty</title>
     <link rel="icon" href="images/logo.svg" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/career.css" />
+    <link rel="stylesheet" href="css/contact.css" />
 </head>
 
 <body>
@@ -147,7 +147,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
     <script src="../js/script.js"></script>
-
 </body>
 
 </html>
