--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Discovery Land Company</title>
     <link rel="icon" href="images/logo.svg" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/career.css" />
+    <link rel="stylesheet" href="css/contact.css" />
 </head>
 
 <body>
@@ -133,7 +133,7 @@
     <div class="inner-pages ">
         <div class="container position-relative">
            <nav class="d-flex justify-content-between align-items-center">
-               <img src="../assets/home_page/logo_symbol.svg" alt="">
+               <img src="images/logo.svg" alt="">
                     <div class="close-menu">
                         X
                     </div>
