--- a/experiences.html
+++ b/experiences.html
@@ -88,9 +88,39 @@
      <!--custom style declared for selector footer -->
      <footer class="footer">
         <div class="container">
-                <p>&copy;Refined Reside Reality. All rights reserved.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <img  src="images/logoimage.png" class="logo-img">
+            </div>
+            <div class="col-md-6">
+                <div class="lastSection">
+                    <ul>
+                        <li class="details get-in">GET IN TOUCH</li>
+                        <li class="details">(480)624-5200</li>
+                        <li class="details">mail@refinedresiderealty.com</li>
+                    </ul>
+                    <ul>
+                        <li class="lastSec-centre">About DLC</li>
+                        <li class="lastSec-centre">Our Worlds</li>
+                        <li class="lastSec-centre">Experiences</li>
+                        <li class="lastSec-centre">Gallery</li>
+                        <li class="lastSec-centre">Press</li>
+                    </ul>
+
+                    <ul>
+                        <li class="menu-list">Contact</li>
+                        <li class="menu-list">Privacy</li>
+                    </ul>
+                </div>
+            </div>
         </div>
+        <div class="col">
+            <p>&copy;Refined Reside Realty All rights reserved.</p>
+        </div>
+        </div>
+
     </footer>
+
      <!---inner pages menubar    -->
      <div class="inner-pages ">
         <div class="container position-relative">
