Modified hamburger menu

--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,13 @@
     <link rel="icon" href="images/logo.svg" type="image/png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <nav class="navbar  fixed-top navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="../pages/home.html"><img src="images/logo.svg" alt="logo" /></a>
+            <a class="navbar-brand" href="#"><img src="images/logo.svg" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -145,11 +144,10 @@
                         <li class="details">mail@refinedresiderealty.com</li>
                     </ul>
                     <ul>
-                        <li class="lastSec-centre">About DLC</li>
+                        <li class="lastSec-centre">About</li>
                         <li class="lastSec-centre">Our Worlds</li>
                         <li class="lastSec-centre">Experiences</li>
                         <li class="lastSec-centre">Gallery</li>
-                        <li class="lastSec-centre">Press</li>
                     </ul>
 
                     <ul>
@@ -183,7 +181,7 @@
         
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
-    <script src="../js/script.js"></script>
+    <script src="js/js.js"></script>
 </body>
 
 </html>
