--- a/career.html
+++ b/career.html
@@ -152,7 +152,7 @@
         
     </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
-        <script src="../js/script.js"></script>
+        <script src="js/js.js"></script>
     </body>
     
     </html>
