--- a/career.html
+++ b/career.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar  fixed-top navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="../pages/home.html"><img src="../assets/logo.svg" alt="logo" /></a>
+            <a class="navbar-brand" href="../pages/home.html"><img src="images/logoimage.png" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -142,11 +142,8 @@
                     </div>
             </nav>
             <ul class="list">
-                <li> <a class="" href="../pages/magazine.html">Magazines</a></li>
-                <li> <a class="" href="../pages/company.html">Company</a></li>
-                <li> <a class="" href="../pages/foundation.html">Foundation</a></li>
-                <li> <a class="" href="../pages/career.html">Career</a></li>
-                <li> <a class="" href="../pages/contact.html">Contact</a></li>
+                <li> <a class="" href="career.html">Career</a></li>
+                <li> <a class="" href="contact.html">Contact</a></li>
             </ul>
             </div>
         
