--- a/career.html
+++ b/career.html
@@ -33,7 +33,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="experiences.html">Experiences</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item">
                         <a class="nav-link menubar" href="#">
                             <div class="menu-icon"><span></span></div>
