--- a/home.html
+++ b/home.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
+
 <body>
-    <nav class="navbar  fixed-top navbar-expand-lg">
+    <nav class="navbar navbar-dark fixed-top navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href=""><img src="images/logoimage.png" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -93,39 +94,40 @@
     </section>
 
     <!--custom style declared for selector footer -->
-    <footer class="footer">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-6">
+    <footer class="footer px-5" id="footer">
+        <div class="row m-0">
+            <div class="col-md-4 p-4 text-light">
+                <ul>
+                    <li class="details get-in">GET IN TOUCH</li>
+                    <li class="details">(480)624-5200</li>
+                    <li class="details">mail@refinedresiderealty.com</li>
+                </ul>
+            </div>
+            <div class="col-md-4 p-4 text-light">
+                <ul>
+                    <li class="lastSec-centre">About DLC</li>
+                    <li class="lastSec-centre">Our Worlds</li>
+                    <li class="lastSec-centre">Experiences</li>
+                    <li class="lastSec-centre">Gallery</li>
+                    <li class="lastSec-centre">Press</li>
+                </ul>
+            </div>
+            <div class="col-md-4 p-4 text-light">
+                <ul>
+                    <li class="menu-list">Contact</li>
+                    <li class="menu-list">Privacy</li>
+                </ul>
+            </div>
+        </div>
+        <hr style="color: white">
+        <div class="row p-0 px-5">
+            <div class="col-md-1">
                 <img  src="images/logoimage.png" class="logo-img">
             </div>
             <div class="col-md-6">
-                <div class="lastSection">
-                    <ul>
-                        <li class="details get-in">GET IN TOUCH</li>
-                        <li class="details">(480)624-5200</li>
-                        <li class="details">mail@refinedresiderealty.com</li>
-                    </ul>
-                    <ul>
-                        <li class="lastSec-centre">About DLC</li>
-                        <li class="lastSec-centre">Our Worlds</li>
-                        <li class="lastSec-centre">Experiences</li>
-                        <li class="lastSec-centre">Gallery</li>
-                        <li class="lastSec-centre">Press</li>
-                    </ul>
-
-                    <ul>
-                        <li class="menu-list">Contact</li>
-                        <li class="menu-list">Privacy</li>
-                    </ul>
-                </div>
+                <p>&copy;Refined Reside Realty All rights reserved.</p>
             </div>
         </div>
-        <div class="col">
-            <p>&copy;Refined Reside Realty All rights reserved.</p>
-        </div>
-        </div>
-
     </footer>
 
      <!---inner pages menubar    -->
@@ -146,4 +148,5 @@
 </body>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
 <script src="js/js.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
