--- a/home.html
+++ b/home.html
@@ -105,9 +105,9 @@
             <div class="col-md-4 p-4 text-light">
                 <ul>
                     <li><a class="footer-section" href="home.html">Home</a></li>
-                    <li><a class="footer-section" href="home.html">Our Worlds</a></li>
-                    <li><a class="footer-section" href="home.html">Experiences</a></li>
-                    <li><a class="footer-section" href="home.html">Gallery</a></li>
+                    <li><a class="footer-section" href="ourWorlds.html">Our Worlds</a></li>
+                    <li><a class="footer-section" href="experiences.html">Experiences</a></li>
+                    <li><a class="footer-section" href="gallery.html">Gallery</a></li>
                 </ul>
             </div>
             <div class="col-md-4 p-4 text-light">
