--- a/gallery.html
+++ b/gallery.html
@@ -96,59 +96,59 @@
             </div>
         </div>
     </div>    
-</body>
- 
-<!--custom style declared for selector footer -->
-<footer class="footer">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <img  src="images/logoimage.png" class="logo-img">
-        </div>
-        <div class="col-md-6">
-            <div class="lastSection">
+    <!--custom style declared for selector footer -->
+    <footer class="footer px-3" id="footer">
+        <div class="row m-0 last-section">
+            <div class="col-md-4 p-4 text-light">
                 <ul>
-                    <li class="details get-in">GET IN TOUCH</li>
-                    <li class="details">(480)624-5200</li>
-                    <li class="details">mail@refinedresiderealty.com</li>
+                    <li>GET IN TOUCH</li>
+                    <li>(480)624-5200</li>
+                    <li>mail@refinedresiderealty.com</li>
                 </ul>
+            </div>
+            <div class="col-md-4 p-4 text-light">
                 <ul>
-                    <li class="lastSec-centre">About DLC</li>
-                    <li class="lastSec-centre">Our Worlds</li>
-                    <li class="lastSec-centre">Experiences</li>
-                    <li class="lastSec-centre">Gallery</li>
-                    <li class="lastSec-centre">Press</li>
+                    <li><a class="footer-section" href="home.html">Home</a></li>
+                    <li><a class="footer-section" href="ourWorlds.html">Our Worlds</a></li>
+                    <li><a class="footer-section" href="experiences.html">Experiences</a></li>
+                    <li><a class="footer-section" href="gallery.html">Gallery</a></li>
                 </ul>
-
+            </div>
+            <div class="col-md-4 p-4 text-light">
                 <ul>
                     <li class="menu-list">Contact</li>
                     <li class="menu-list">Privacy</li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="col">
-        <p>&copy;Refined Reside Realty All rights reserved.</p>
-    </div>
-    </div>
+        <hr style="color: white">
+        <div class="row p-0 px-5">
+            <div class="col-md-1">
+                <img  src="images/logoimage.png" class="logo-img">
+            </div>
+            <div class="col-md-6">
+                <p>&copy;Refined Reside Realty All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 
-</footer>
-
- <!---inner pages menubar    -->
- <div class="inner-pages ">
-    <div class="container position-relative">
-       <nav class="d-flex justify-content-between align-items-center">
-           <img src="../assets/home_page/logo_symbol.svg" alt="">
-                <div class="close-menu">
-                    X
-                </div>
-        </nav>
-        <ul class="list">
-            <li> <a class="" href="career.html">Career</a></li>
-            <li> <a class="" href="contact.html">Contact</a></li>
-        </ul>
-    </div>        
-</div>
+    <!---inner pages menubar    -->
+    <div class="inner-pages ">
+        <div class="container position-relative">
+        <nav class="d-flex justify-content-between align-items-center">
+            <img src="../assets/home_page/logo_symbol.svg" alt="">
+                    <div class="close-menu">
+                        X
+                    </div>
+            </nav>
+            <ul class="list">
+                <li> <a class="" href="career.html">Career</a></li>
+                <li> <a class="" href="contact.html">Contact</a></li>
+            </ul>
+        </div>        
+    </div>
+</body>
+ 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
 <script src="js/js.js"></script>
 </html>
