contact us page issue and footer aligment fixed

--- a/contact.html
+++ b/contact.html
@@ -107,28 +107,22 @@
         </div>
     </div>
 
-    <!-- section-4 -->
-    <div class="section-4">
-        <div>
-            <h1 class="sec4-head">Discovery Land Company</h1>
-            <div class="inner-box">
-                <div class="first-box">
-                    <h3>
-                        Headquarters
-                    </h3>
-                    <p>Phone: <span class="phone">(480) 624-5200</span></p>
-                    <p class="mail-id">mail@discoverylandco.com</p>
-                </div>
-                <div class="second-box">
-                    <h3>
-                        Marketing office
-                    </h3>
-                    <p>Phone: <span class="phone">(310) 859-0700</span></p>
-                    <p class="mail-id">media@discoverylandco.com</p>
-                </div>
+    <div class="section-4 mt-2">
+        <h1 class="sec4-head">Discovery Land Company</h1>
+        <div class="row mt-5 justify-content-center align-items-center inner-box">
+            <div class="col-lg-6 col-sm-12">
+                <h3>Headquarters</h3>
+                <p>Phone: <span class="phone">(480) 624-5200</span></p>
+                <p class="mail-id">mail@discoverylandco.com</p>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <h3> Marketing office</h3>
+                <p>Phone: <span class="phone">(310) 859-0700</span></p>
+                <p class="mail-id">media@discoverylandco.com</p>
             </div>
         </div>
     </div>
+
     <!--custom style declared for selector footer -->
     <footer class="footer px-3" id="footer">
         <div class="row m-0 last-section">
