video added for home page

--- a/home.html
+++ b/home.html
@@ -42,9 +42,13 @@
             </div>
         </div>
     </nav>
+
     <section class="section-1">
+        <video autoplay muted loop class="background-video">
+            <source src="images/about/DLC web hero 1.5min organized by property.mov.mp4" type="">
+        </video>
         <div class=" container main-container">
-            <h1>Creating your <br /><span>perfect world</span> </h1>
+            <h1>Creating your<br /><span>perfect world</span> </h1>
         </div>
     </section>
     
