menu added for mobile view

--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -14,11 +14,14 @@
 
 <body>
  <div class="firstSection">
-        <!-- <div class="firstSection-1"> -->
-            <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-dark navbar-expand-lg">
                 <div class="container main-container">
                     <a class="navbar-brand" href="home.html"><img src="images/logoimage.png" alt="logo" /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
@@ -40,7 +43,7 @@
                     </div>
                 </div>
             </nav>
-        <!-- </div>  -->
+
         <section class="section-1">
         <!-- Declaring row with margin top as 5rem-->
         <!-- custom selection added for gallery container -->
@@ -304,4 +307,5 @@
 </body>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
 <script src="js/js.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
