--- a/career.html
+++ b/career.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar  fixed-top navbar-expand-lg">
+    <nav class="navbar navbar-dark fixed-top navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="../pages/home.html"><img src="images/logoimage.png" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -72,7 +72,7 @@
                                 ongoing management. Voted one of the world’s top mid-sized employers to work for (2019), by Forbes
                                 magazine, our distinct approach to development, along with our commitment to a family-focus experience,
                                 ensures our members and communities are always at the heart of everything we do.</p>
-                            <button class="pressbar" href="../pages/ourWorlds.html">See Positions</button>
+                            <button class="pressbar" href="ourWorlds.html">See Positions</button>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                                 team, Marketing department or part of the team on property, each employee has a role to play in creating
                                 unparalleled experiences. We pride ourselves in offering numerous opportunities to develop your skills
                                 and knowledge around your chosen career..</p>
-                            <button class="pressbar" href="../pages/ourWorlds.html">See Positions</button>
+                            <button class="pressbar" href="ourWorlds.html">See Positions</button>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                        <img src="images/about/coverimage.jpg" class="figure-sec-3" alt="...">
@@ -153,5 +153,7 @@
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
         <script src="js/js.js"></script>
 </body>    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
 
