--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar  fixed-top navbar-expand-lg">
+    <nav class="navbar navbar-dark fixed-top navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href=""><img src="images/logoimage.png" alt="logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -146,4 +146,5 @@
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
 <script src="js/js.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
