--- a/home.html
+++ b/home.html
@@ -33,6 +33,12 @@
                         <a class="nav-link" href="experiences.html">Experiences</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item mobile-only">
+                        <a class="nav-link" href="career.html">Career</a>
+                    </li>
+                    <li class="nav-item mobile-only">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link menubar" href="#">
                             <div class="menu-icon"><span></span></div>
