bharat contact form

--- a/career.html
+++ b/career.html
@@ -78,7 +78,8 @@
                                 ongoing management. Voted one of the world’s top mid-sized employers to work for (2019), by Forbes
                                 magazine, our distinct approach to development, along with our commitment to a family-focus experience,
                                 ensures our members and communities are always at the heart of everything we do.</p>
-                            <button class="pressbar" href="ourWorlds.html">See Positions</button>
+                                <a href="https://rbs.wd3.myworkdayjobs.com/RBS/login" target="_blank">
+                                <button class="pressbar" href="ourWorlds.html">See Positions</button> </a>
                     </div>
                 </div>
             </div>
@@ -96,7 +97,8 @@
                                 team, Marketing department or part of the team on property, each employee has a role to play in creating
                                 unparalleled experiences. We pride ourselves in offering numerous opportunities to develop your skills
                                 and knowledge around your chosen career..</p>
-                            <button class="pressbar" href="ourWorlds.html">See Positions</button>
+                                <a href="https://rbs.wd3.myworkdayjobs.com/RBS/login" target="_blank">
+                            <button class="pressbar">See Positions</button> </a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                        <img src="images/about/coverimage.jpg" class="figure-sec-3" alt="...">
@@ -162,4 +164,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
-
