--- a/career.html
+++ b/career.html
@@ -51,7 +51,7 @@
     </nav>
     <section class="section-1">
         <div class=" container main-container">
-            <h1>Join the <br /><span>Discovery family</span> </h1>
+            <h1>Join the <br /><span>RRR family</span> </h1>
         </div>
         <div class="container position-relative">
             <div class="scroll">
@@ -71,8 +71,8 @@
                         <img src="images/career/career-s2.jpg" class="figure-sec-2" alt="...">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <h1 class="s2-head">About discovery </h1>
-                            <p class="s2-para">Discovery has created over 20 private residential club communities – each bringing a
+                        <h1 class="s2-head">About RRR </h1>
+                            <p class="s2-para">RRR has created over 20 private residential club communities – each bringing a
                                 unique approach to modern luxury living in a spectacular setting. With nearly 30 years’ experience in
                                 land development and real estate, we continually execute with excellence from vision to delivery and
                                 ongoing management. Voted one of the world’s top mid-sized employers to work for (2019), by Forbes
