--- a/ourWorlds.html
+++ b/ourWorlds.html
@@ -279,8 +279,8 @@
         </div>
         <div class="col-md-4 p-4 text-light">
             <ul>
-                <li class="menu-list">Contact</li>
-                <li class="menu-list">Privacy</li>
+                <li><a class="footer-section" href="contact.html">Contact</a></li>
+                <li><a class="footer-section" href="career.html">Career</a></li>
             </ul>
         </div>
     </div>
