more content added

--- a/experiences.html
+++ b/experiences.html
@@ -90,6 +90,34 @@
                     </figure>
                 </div>
             </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="main-content">
+                        <h1 class="s2-head">Golf</span></h1>
+                        <p class="s2-para">We commission the world’s most renowned course architects to design spectacular golf experiences on challenging yet incredibly playable 18-hole courses. Our trademark comfort stations also set new standards in on-course amenities.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <figure class="figure">
+                        <img src="images/about/vita-vilcina-KtOid0FLjqU-unsplash.jpg" class="figure-img img-fluid rounded" alt="...">
+
+                    </figure>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="main-content">
+                        <h1 class="s2-head">Outdoor Pursuits</span></h1>
+                        <p class="s2-para">Our signature Outdoor Pursuits program is designed for families to create lasting memories together. Whether you’re trying a new sport or taking a day trip, our team will ensure you make the most of every minute with activities designed to help you take advantage of everything each region has to offer.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <figure class="figure">
+                        <img src="images/about/vita-vilcina-KtOid0FLjqU-unsplash.jpg" class="figure-img img-fluid rounded" alt="...">
+
+                    </figure>
+                </div>
+            </div>
     </section>
 
     <!--custom style declared for selector footer -->
