--- a/experiences.html
+++ b/experiences.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <figure class="figure">
-                        <img src="images/about/vita-vilcina-KtOid0FLjqU-unsplash.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <img src="images/experiences/exp-golf.jpg" class="figure-img img-fluid rounded" alt="golf">
 
                     </figure>
                 </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <figure class="figure">
-                        <img src="images/about/vita-vilcina-KtOid0FLjqU-unsplash.jpg" class="figure-img img-fluid rounded" alt="...">
+                        <img src="images/experiences/s3-outdoor.jpg" class="figure-img img-fluid rounded" alt="outdoor">
 
                     </figure>
                 </div>
